--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-$color: #FFEE00;
+$color: #37f52a;
 img {
     display: inline-block;
     text-align: center;
@@ -10,10 +10,33 @@ img {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-
+    
     li{
-        padding: 10px;
+        width: 10%;
+        padding: 20px;
         list-style-type: none;
         background-color: $color;
+        text-align: center;
+        border: 20px solid 37f52a;
+        margin: 0;    
     }
+
+    .left-bttn{
+            border-radius: 10px 0 0 10px;
+        }
+    .right-bttn{
+        border-radius: 0 10px 10px 0;
+    }
+    /*.break{
+        display: flex;
+        flex-basis: 100%;
+    }*/
+}
+
+.location-container{
+    display: flex;
+    div{
+        flex-direction: row;
+    }
+    
 }
